FIX Fixed various styles and design aspects.
- TarjetaPost's content is truncated by a maximum number n of words.
- Only admin users can see control panel.

--- a/src/components/TarjetaPost.css
+++ b/src/components/TarjetaPost.css
@@ -1,13 +1,8 @@
 .tp-card {
-    display: block;
-    display: -webkit-box;
-    width  : 900px;
-    max-height : 500px;
-    margin : 0 auto;
-    line-height       : 1;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    overflow          : hidden;
-    text-overflow     : ellipsis;
+    width: 70vmax;
+    text-align: justify;    
+}
 
+.tp-card-mdr {
+    padding: 0 2vmin;
 }
